Added Signposting L1 infrastructure. Added some Qol=L improvements.